--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,4 @@
-title: Sen Li's Homepage
+title: Miaozeng Du's Homepage
 page-top-title: Sen Li
-top-section-bg-text: Data Science
-home-subtitle: Sen Li&ensp;|&ensp;李森
-copyright-text: '&copy; Sen Li 2023-2026. All Rights Reserved.'
+top-section-bg-text: Computer Science
+home-subtitle: Miaozeng Du&ensp;|&ensp;杜苗增
