Update page-top-title to Miaozeng Du

--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,4 +1,4 @@
 title: Miaozeng Du's Homepage
-page-top-title: Sen Li
+page-top-title: Miaozeng Du
 top-section-bg-text: Computer Science
 home-subtitle: Miaozeng Du&ensp;|&ensp;杜苗增
